<resources>
    <string name="app_name">TheBookworm</string>
    <string name="bienvenue_dans_votre_jardin_secret">Bienvenue dans votre jardin secret</string>
    <string name="chercher_un_livre">Chercher un livre...</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="parcourir">parcourir</string>
    <string name="ma_biblioth_que">Ma bibliothèque</string>
    <string name="todo">TODO</string>
    <string name="ajout">Ajouter</string>
    <string name="vos_biblioth_ques">Vos Bibliothèques</string>
    <string name="nom">Nom</string>
    <string name="envie_de_cr_er_une_nouvelle_biblioth_que_veuillez_entrer_son_nom_ci_dessous">Envie de créer une nouvelle bibliothèque? Veuillez entrer son nom ci-dessous.</string>
    <string name="name">name</string>
    <string name="annuler">annuler</string>
    <string name="nom_de_la_biblioth_que">Nom de la bibliothèque</string>
    <string name="valider">valider</string>
    <string name="ajouter_une_biblioth_que">Ajouter une bibliothèque</string>
    <string name="retour">Retour</string>
    <string name="supprimer">supprimer</string>
    <string name="ma_bibli">Ma Bibliothèque</string>
    <string name="modifier">modifier</string>
    <string name="button">Ajouter un livre</string>
    <string name="ajouter_un_livre">Ajouter un livre</string>
    <string name="titre">Titre</string>
    <string name="auteur">Auteur</string>
    <string name="librairie">Librairie</string>
    <string name="nomlivre">titre</string>
    <string name="ajouté">Ajouter</string>
    <string name="added">Ajouter</string>
    <string name="adding">Ajouter</string>
    <string name="valide">Valider</string>
    <string name="annule">Annuler</string>
    <string name="add">Ajouter</string>
    <string name="bienvenue_dans_votre_biblioth_que_priv_e">Bienvenue dans votre bibliothèque privée</string>
    <string name="back">Retour</string>
    <string name="del">Supprimer</string>
    <string name="AddList">Ajouter</string>
    <string name="crire">écrire</string>
    <string name="write">écrire</string>
    <string name="writing">écrire</string>
    <string name="mes_livres">Mes livres</string>
    <string name="textview">TextView</string>
</resources>
