<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".NewLibrary">

    <TextView
        android:id="@+id/Name"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="412dp"
        android:text="@string/nom"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Titre"
        android:layout_width="338dp"
        android:layout_height="44dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="660dp"
        android:gravity="center"
        android:text="@string/ajouter_une_biblioth_que"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Nametext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="@string/nom_de_la_biblioth_que"
        android:inputType="text"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/valide"
        android:layout_width="119dp"
        android:layout_height="61dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/valider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="119dp"
        android:layout_height="61dp"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="16dp"
        android:text="@string/annuler"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="291dp"
        android:layout_height="86dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="556dp"
        android:gravity="center"
        android:text="@string/envie_de_cr_er_une_nouvelle_biblioth_que_veuillez_entrer_son_nom_ci_dessous"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>