<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".Mylibrary">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="297dp"
        android:layout_height="52dp"
        android:layout_marginEnd="64dp"
        android:gravity="center"
        android:text="@string/vos_biblioth_ques"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/ajouter"
        android:layout_width="100dp"
        android:layout_height="62dp"
        android:layout_marginStart="292dp"
        android:layout_marginBottom="44dp"
        android:text="@string/AddList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Retour"
        android:layout_width="100dp"
        android:layout_height="62dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="44dp"
        android:text="@string/retour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/listlibrary"
        android:layout_width="389dp"
        android:layout_height="548dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>